--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -4,6 +4,7 @@ body {
 
 .if-m--main {
     background: #f7931e;
+    color: #fff;
 }
 
     .if-m--main .if-m--header,
@@ -19,34 +20,92 @@ body {
             height: 2rem;
         }
 
-        .if-m--main .if-m--header .menu > li:not(:first-child) {
-            margin: 0 0 0 .8rem;
+        .if-m--main .if-m--header .menu {
+            -webkit-box-pack: end;
+            -webkit-justify-content: flex-end;
+            -ms-flex-pack: end;
+            justify-content: flex-end;
         }
 
-        .if-m--main .if-m--header .menu > li > a {
-            padding: .7rem;
+            .if-m--main .if-m--header .menu > li:not(:first-child) {
+                margin: 0 0 0 .8rem;
+            }
 
-            color: #fff;
+            .if-m--main .if-m--header .menu > li > a {
+                padding: .7rem;
 
-            font-family: proxima-nova, sans-serif;
-            font-style: normal;
-            font-weight: 500;
-            font-size: .8rem;
-            letter-spacing: .12rem;
-            text-transform: uppercase;
-        }
+                color: #fff;
 
-        .if-m--main .if-m--header .menu > .cta {
-            border: .14rem solid #fff;
-            border-radius: 1.2rem;
-        }
+                font-family: proxima-nova, sans-serif;
+                font-style: normal;
+                font-weight: 500;
+                font-size: .8rem;
+                letter-spacing: .12rem;
+                text-transform: uppercase;
+            }
+
+            .if-m--main .if-m--header .menu > .cta {
+                border: .14rem solid #fff;
+                border-radius: 1.2rem;
+            }
 
             .if-m--main .if-m--header .menu > .cta > a {
                 padding: .6rem;
             }
 
-            .if-m--main .if-m--header .menu > .cta:hover {
-                color: #000;
+                .if-m--main .if-m--header .menu > .cta:hover {
+                    color: #f7931e;
+                    background: #fff;
+
+                    -webkit-transition: background 300ms ease;
+                    -moz-transition: background 300ms ease;
+                    -ms-transition: background 300ms ease;
+                    -o-transition: background 300ms ease;
+                    transition: background 300ms ease;
+                }
+
+                    .if-m--main .if-m--header .menu > .cta:hover > a {
+                        color: #f7931e;
+                        
+                        -webkit-transition: color 300ms ease;
+                        -moz-transition: color 300ms ease;
+                        -ms-transition: color 300ms ease;
+                        -o-transition: color 300ms ease;
+                        transition: color 300ms ease;
+                    }
+
+    .if-m--main .if-m--jumbo {
+        margin: 5rem 0 0;
+    }
+
+        .if-m--main .if-m--jumbo .if-m--logo {
+            height: 6rem;
+        }
+
+        .if-m--main .if-m--jumbo .if-m--titles h1,
+        .if-m--main .if-m--jumbo .if-m--titles h3 {
+            font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
+            font-weight: 300;
+            line-height: 1.1;
+        }
+
+        .if-m--main .if-m--jumbo .blurb {
+            margin: 1rem 0 0;
+        }
+
+        .if-m--main .if-m--jumbo .cta {
+            color: #fff;
+            border: .14rem solid #fff;
+            border-radius: 1.2rem;
+
+            padding: .5rem 2rem;
+            margin: 2rem 0 0;
+            
+            display: inline-block;
+        }
+
+            .if-m--main .if-m--jumbo .cta:hover {
+                color: #f7931e;
                 background: #fff;
 
                 -webkit-transition: background 300ms ease;
@@ -56,7 +115,7 @@ body {
                 transition: background 300ms ease;
             }
 
-                .if-m--main .if-m--header .menu > .cta:hover > a {
+                .if-m--main .if-m--jumbo .cta:hover > a {
                     color: #f7931e;
                     
                     -webkit-transition: color 300ms ease;
@@ -66,9 +125,59 @@ body {
                     transition: color 300ms ease;
                 }
 
-.if-m--cta {
+.if-m--footer {
     background: #464646;
-    color: #f0f0f0;
+    color: #888;
+
+    font-size: .8rem;
 
     padding: 2rem;
+}
+
+    .if-m--footer .if-m--trademark {
+        text-align: right;
+    }
+
+/* SMALL SCREENS */
+@media screen and (max-width: 39.9375em) {
+    .if-m--main .if-m--header {
+        text-align: center;
+        padding: 1rem 0;
+    }
+
+        .if-m--main .if-m--header .menu {
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+        }
+
+    .if-m--main .if-m--jumbo {
+        margin: 0;
+    }
+
+        .if-m--main .if-m--jumbo .if-m--titles {
+            text-align: center;
+        }
+
+            .if-m--main .if-m--jumbo .if-m--titles h1 {
+                display: none;
+            }
+
+            .if-m--main .if-m--jumbo .if-m--titles h3 {
+                font-size: 2rem;
+            }
+
+        .if-m--main .if-m--jumbo .cta {
+            text-align: center;
+            display: inherit;
+        }
+    
+    .if-m--footer {
+        padding: .8rem;
+    }
+
+        .if-m--footer .if-m--trademark {
+            text-align: left;
+        }
 }
