--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -153,6 +153,64 @@ h1, h2, h3, h4 {
             height: 4rem;
         }
 
+        .if-m--main .if-m--content .if-m--banner {
+            width: 75rem;
+            min-height: 200px;
+
+            margin: 1rem -16px 2rem;
+
+            color: #fff;
+
+            text-align: center;
+            text-shadow: 0px 0px .2rem rgba(85, 85, 85, .8);
+
+            background-size: 100%;
+            background: #000 no-repeat;
+        }
+
+            .if-m--main .if-m--content .if-m--banner .if-m--banner-overlay {
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23000000' fill-opacity='1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+
+                width: 100%;
+                height: 100%;
+            }
+
+                .if-m--main .if-m--content .if-m--banner .if-m--banner-overlay {
+                    padding: 3rem 0;
+                }
+
+                .if-m--main .if-m--content .if-m--banner.has-cta .if-m--banner-overlay {
+                    padding: 1rem 0 1.8rem;
+                }
+
+            .if-m--main .if-m--content .if-m--banner h1 {
+                font-size: 3rem;
+            }
+
+            .if-m--main .if-m--content .if-m--banner h3 {
+                font-size: 1.9375rem;
+            }
+
+            .if-m--main .if-m--content .if-m--banner .cta {
+                margin: 1.5rem 0 0;
+            }
+
+                .if-m--main .if-m--content .if-m--banner .cta .button {
+                    margin: 0;
+
+                    color: #fff;
+                    background: none;
+                    border: .14rem solid #fff;
+                    border-radius: 1.2rem;
+                }
+
+                    .if-m--main .if-m--content .if-m--banner .cta .button:hover {
+                        background: #fff;
+                        color: #000;
+
+                        text-shadow: none;
+                    }
+
 .if-m--footer {
     background: #464646;
     color: #888;
