--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -153,6 +153,15 @@ h1, h2, h3, h4 {
             height: 4rem;
         }
 
+    .if-m--main .if-m--livemap #if-a--livemap-box {
+        border: none;
+        
+        width: 100%;
+        height: 100%;
+
+        background: #464646;
+    }
+
 .if-m--footer {
     background: #464646;
     color: #888;
