--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -160,8 +160,7 @@ h1, h2, h3, h4 {
             margin: 1rem -16px 2rem;
 
             color: #fff;
-
-            text-align: center;
+            
             text-shadow: 0px 0px .2rem rgba(85, 85, 85, .8);
 
             background-size: 100%;
@@ -175,12 +174,9 @@ h1, h2, h3, h4 {
                 height: 100%;
             }
 
-                .if-m--main .if-m--content .if-m--banner .if-m--banner-overlay {
-                    padding: 3rem 0;
-                }
-
-                .if-m--main .if-m--content .if-m--banner.has-cta .if-m--banner-overlay {
-                    padding: 1rem 0 1.8rem;
+                .if-m--main .if-m--content .if-m--banner.has-cta .if-m--banner-overlay .if-m--banner-content {
+                    margin-top: auto;
+                    margin-bottom: auto;
                 }
 
             .if-m--main .if-m--content .if-m--banner h1 {
@@ -191,8 +187,14 @@ h1, h2, h3, h4 {
                 font-size: 1.9375rem;
             }
 
+            .if-m--main .if-m--content .if-m--banner .cell.cta {
+                margin-top: auto;
+                margin-bottom: auto;
+            }
+
             .if-m--main .if-m--content .if-m--banner .cta {
-                margin: 1.5rem 0 0;
+                margin: 0;
+                text-align: right;
             }
 
                 .if-m--main .if-m--content .if-m--banner .cta .button {
@@ -262,6 +264,16 @@ h1, h2, h3, h4 {
     .if-m--main .if-m--content {
         margin: 0;
     }
+
+        .if-m--main .if-m--content .if-m--banner-overlay {
+            text-align: center;
+            padding: 1rem 0 1.8rem;
+        }
+
+            .if-m--main .if-m--content .if-m--banner .cta {
+                margin: 1rem 0 0;
+                text-align: center;
+            }
     
     .if-m--footer {
         padding: .8rem;
