--- a/assets/css/site.2.css
+++ b/assets/css/site.2.css
@@ -48,7 +48,7 @@ nav ul a,
 mobile-nav ul a {
     display: inline-block;
 
-    padding: 15px 8px;
+    padding: 15px 8px 12px;
 
     color: #fff;
 
@@ -66,6 +66,15 @@ mobile-nav ul a:focus {
 nav ul a:hover,
 mobile-nav ul a:hover {
     color: #aaa;
+}
+
+nav ul a.active,
+mobile-nav ul a.active {
+    border-bottom: 3px solid #f7931e;
+}
+
+nav .logo {
+    height: 50px;
 }
 
 nav .logo a {
@@ -126,8 +135,12 @@ mobile-nav .logo h1 {
 }
 
 mobile-nav ul a {
-    padding: 8px 0;
+    padding: 13px 0 3px;
     font-size: 15px;
+}
+
+mobile-nav ul a.active {
+
 }
 
 mobile-nav .cta {
