unique ids on svgs
also add digitalocean affiliate link

--- a/assets/css/site.2.css
+++ b/assets/css/site.2.css
@@ -245,6 +245,12 @@ footer {
     text-align: right;
 }
 
+footer .do {
+    float: left;
+    width: 120px;
+    margin: 30px 0 18px;
+}
+
 footer .brand {
     display: inline-block;
 
