--- a/assets/css/site.2.css
+++ b/assets/css/site.2.css
@@ -255,7 +255,7 @@ footer .brand {
     display: inline-block;
 
     height: 44px;
-    margin: 27px 15px 0 0;
+    margin: 18px 15px 18px 0;
 }
 
 footer .brand p {
@@ -263,6 +263,12 @@ footer .brand p {
 
     font-size: 14px;
     line-height: 22px;
+}
+
+footer .brand a {
+    color: #09eaaa;
+} footer .brand a:hover {
+    color: #0abcb8;
 }
 
 footer .logo {
