no upper padding when a section is not at the top of a page

--- a/assets/css/site.2.css
+++ b/assets/css/site.2.css
@@ -433,6 +433,7 @@ h4.under {
         margin: 20px auto 0;
     }
 
+    page { padding: 0 0 35px; }
     page section .container { padding: 0 15px; }
 
     section#reasons svg { height: 80px; }
