--- a/assets/css/site.2.css
+++ b/assets/css/site.2.css
@@ -328,6 +328,18 @@ footer .logo {
 }
 
 
+[component="stats/player/list"] {
+    height: 100%;
+    min-height: 65vh;
+    overflow-y: scroll;
+}
+
+[component="stats/player/list/search"] {
+    position: relative;
+    margin: 0;
+    z-index: 1;
+}
+
 [component="stats/player/list/item"] {
     background: #bfbfbf;
     padding: 5px;
@@ -344,7 +356,7 @@ footer .logo {
     background: #fff;
     cursor: default;
 
-    box-shadow: -15px 0px 20px 0px rgba(0,0,0,.2);
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,.2);
     position: relative;
 }
 
@@ -496,6 +508,82 @@ a.icon-container {
 
 .js-off-canvas-overlay {
     background: none;
+}
+
+.loader,
+.loader:before,
+.loader:after {
+    background: #f7931e;
+    -webkit-animation: load1 1s infinite ease-in-out;
+    animation: load1 1s infinite ease-in-out;
+    width: 1em;
+    height: 4em;
+}
+
+.loader {
+    color: #f7931e;
+    text-indent: -9999em;
+    margin: 66px auto;
+    position: relative;
+    font-size: 11px;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+.loader.small {
+    margin: 20px auto;
+    font-size: 4px;
+}
+
+.loader-container-small {
+    height: 40px;
+    width: 100%;
+}
+
+.loader:before,
+.loader:after {
+    position: absolute;
+    top: 0;
+    content: '';
+}
+
+.loader:before {
+    left: -1.5em;
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.loader:after {
+    left: 1.5em;
+}
+
+@-webkit-keyframes load1 {
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 0;
+        height: 4em;
+    }
+    40% {
+        box-shadow: 0 -2em;
+        height: 5em;
+    }
+}
+
+@keyframes load1 {
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 0;
+        height: 4em;
+    }
+    40% {
+        box-shadow: 0 -2em;
+        height: 5em;
+    }
 }
 
 .bignum, .numexp {
