--- a/assets/css/site.2.css
+++ b/assets/css/site.2.css
@@ -324,6 +324,7 @@ footer .brand a {
 
 footer .logo {
     height: 80px;
+    padding: 15px;
     float: right;
 }
 
@@ -462,6 +463,7 @@ h4.under {
         float: none;
         display: block;
         height: 50px;
+        padding: 0;
         margin: 0 auto 15px;
     }
 }
