--- a/src/_styles/livemap.css
+++ b/src/_styles/livemap.css
@@ -2,10 +2,14 @@
   border: none;
   
   width: 100vw;
-  height: calc(100vh - 50px);
-  margin-top: -7px;
+  height: calc(100vh - 50px - 80px);
+  margin: -7px 0;
 
   background: #464646;
+}
+
+footer .container {
+  width: 100% !important;
 }
 
 /* MEDIUM SCREENS */
